// version of protocol buffer used
syntax = "proto3";

// package name for the buffer
package hello;

// serviche which can be executed
service Say {
    // function whichcan be called
    rpc Send (SayRequest) returns (SayResponse);

    // we specify that we return a stream
    rpc SendStream(SayRequest) returns (stream SayResponse);
    rpc ReceiveStream(stream SayRequest) returns (SayResponse);
}

// argument
message SayRequest {
    // data type and position of data
    string name = 1;
}

// return value 
message SayResponse {
    // data type and position of data
    string message = 1;
}
